--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	                    <span class="icon-bar"></span>
 	                </button>
 	                <a class="navbar-brand navbar-brand-logo" href="#">
-	                    <img src="images/Logo.png">
+	                    <img src="images/logo.png">
 	                </a>
 	            </div>
 	            <!-- Collect the nav links, forms, and other content for toggling -->
@@ -55,7 +55,7 @@
     		<p class="text-center text-uppercase color-primary font-bold description">Watch our promotional video</p>
     		<br><br>
     		<div class="text-center">
-	    		<img src="images/MediaPlaceholder.png" alt="">
+	    		<img src="images/video.png" alt="">
 	    	</div>
 	    	<br><br>
 	    	<div class="text-center">
@@ -494,11 +494,11 @@
 	    				</a>
 	    				<a href="#" class="font-bold text-uppercase social-icon">
 	    					<span class="helper"></span>
-	    					<img src="images/Dribbble.png" alt="">
+	    					<img src="images/dribbble.png" alt="">
 	    				</a>
 	    				<a href="#" class="font-bold text-uppercase social-icon">
 	    					<span class="helper"></span>
-	    					<img src="images/Linkedin.png" alt="">
+	    					<img src="images/linkedin.png" alt="">
 	    				</a>
 	    			</div>
 				</div>
