--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
 	    				</a>
 	    				<a href="#" class="font-bold text-uppercase social-icon">
 	    					<span class="helper"></span>
-	    					<img src="images/linkedin.png" alt="">
+	    					<img src="images/linkedIn.png" alt="">
 	    				</a>
 	    			</div>
 				</div>
